welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: type mismatch;
 found   : Unit
 required: Int
	else {setPos(x+1, y = 0)}
                            ^